crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_mut_param_moveout_map.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `m[k]` may return to the caller with its value moved away
 --> mem:///main.lu:6:13
  |
5 | fn f(mut m: Map[str, List[int]], k: str) {
  |          - `m` is `mut`: the caller reads it again after the call
6 |     var v = m[k] else List[int]()
  |             ^^^^ moved here, and not stored back on every path to a return
  |
  = note: a `mut` parameter is initialized at every return of the function [mem.tier0.mode.mut]:
    store a value back into `m[k]` before each return.
