crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_mut_param_moveout_take_onward.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `xs` may return to the caller with its value moved away
 --> mem:///main.lu:6:23
  |
5 | fn f(mut xs: List[int]) {
  |          -- `xs` is `mut`: the caller reads it again after the call
6 |     let n = sink(take xs)
  |                       ^^ moved here, and not stored back on every path to a return
  |
  = note: a `mut` parameter is initialized at every return of the function [mem.tier0.mode.mut]:
    store a value back into `xs` before each return.
