crates/wolf_mem/tests/snapshots/mem_diagnostics__e1001_partial_move.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1001]: `p.x.n` is used here after its value moved away
 --> mem:///main.lu:8:13
  |
6 |     let a = eat(take p.x)
  |                      --- `p.x` moved here
7 |     let b = p.y.n
8 |     let c = p.x.n
  |             ^^^^^ used after the move
  |
  = note: `p.x.n` is part of `p.x`; moving one empties the other. Disjoint fields stay usable.
  = note: re-initializing the place (assigning to it) also makes it usable again.
help: to keep the original, copy it at the move
  |
6 |     let a = eat(take copy p.x)
  |
